src/test/deca/context/valid/variable/empty_assign_boolean.deca
// Description:
//    Declare a bool variable
//
// Results:
//
//
// History:
//    created on 06/01/2025

{
        boolean a;
}
